# Crior-Test-imprimante-

./: README.md
Crior Imprimante/: README.md  main.py  requirements.txt
Crior Imprimante/model/: __init__.py  impression_brother_cmd.py
Crior Imprimante/my_module/: __init__.py  __manifest__.py
Crior Imprimante/my_module/models/: __init__.py  excel.py  models.py
Crior Imprimante/my_module/security/: ir.model.access.csv
Crior Imprimante/my_module/views/: custom_sale.xml  hide_price_zero_line.xml
excel-printer-project/: README.md  pyproject.toml  requirements.txt
excel-printer-project/src/: config.py  main.py
excel-printer-project/src/model/: config.json  excel.py
excel-printer-project/src/printer/: escp.py
excel-printer-project/src/utils/: odoo_env.py
excel-printer-project/tests/: test_printer.py
model/: excel.py  impression_brother_cmd.py
